--- a/pages/cadastrar.html
+++ b/pages/cadastrar.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="stylesheet" href="../syles/footer.css">
-    <link rel="stylesheet" href="../syles/main.css">
-    <link rel="stylesheet" href="../syles/header.css">
+    <link rel="stylesheet" href="./../syles/footer.css">
+    <link rel="stylesheet" href="./../syles/main.css">
+    <link rel="stylesheet" href="./../syles/header.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Biblioteca Senai</title>
+    <title>Cadastrar</title>
 </head>
 
 <body>
@@ -30,3 +30,15 @@
             </div> 
             </nav>
     </header>
+
+            <footer>
+                <nav>
+                    <div>
+                        <pre><h3>Todos os direitos reservados ao Sistema Fiep - 2023&copy; 
+Av. Cândido de Abreu, 200 - Centro Cívico - 80530-902 - Curitiba-PR
+                    </h3></pre>
+                    </div>
+                </nav>
+             </footer>
+        </body>
+        </html>
